# OmniDice

./: .gitignore  Cargo.toml  README.md  grammar.txt  index.css  index.html  test.json
.github/workflows/: gh-pages-deploy.yml
programs/: code.od
programs/_compiled/: code.odc
src/: app.rs  builtins.rs  cache.rs  code.od  distribution.rs  error.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  tokeniter.rs  types.rs
src/app/: docs.rs  mod.rs
src/interpreter/: builtins.rs  distribution.rs  error.rs  interpreter.rs  mod.rs  tokeniter.rs
src/interpreter/parser/: expr.rs  mod.rs  vars.rs
src/interpreter/types/: arr.rs  bool.rs  dice.rs  function.rs  iter.rs  map.rs  maybe.rs  mod.rs  num.rs  range.rs  ref_t.rs  special.rs  string.rs  tup.rs
src/parser/: expr.rs  vars.rs
src/types/: arr.rs  bool.rs  dice.rs  func_sum.rs  function.rs  iter.rs  map.rs  maybe.rs  num.rs  range.rs  ref_t.rs  rust_function.rs  special.rs  string.rs  tup.rs  typevar.rs
src/types/iter/: funcs.rs
tmp/: Cargo.toml
tmp/src/: main.rs
