[package]
name = "omnidice"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
ordered-float = "5.0.0"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }
typetag = "0.2.20"
