[package]
name = "omnidice"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
inventory = "0.3.20"
itertools = "0.14.0"
leptos = { version = "0.8.6", features = ["csr"] }
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }
typetag = "0.2.20"
wasm-bindgen = "0.2.100"
