[package]
name = "omnidice"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
inventory = "0.3.20"
itertools = "0.14.0"
leptos = { version = "0.8.6", features = ["csr"] }
leptos-use = "0.16.2"
log = "0.4.27"
ordered-float = "5.0.0"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }
typetag = "0.2.20"
web-sys = { version = "0.3.77", features = ["DedicatedWorkerGlobalScope", "Worker", "WorkerOptions", "WorkerType"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
serde = []
