[package]
name = "omnidice"
version = "0.1.0"
edition = "2024"

[dependencies]
inventory = "0.3.20"
itertools = "0.14.0"
leptos = "0.8.3"
ordered-float = "5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
typetag = "0.2.20"
